--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
 
   <script src="js/utils.js"></script>
   <script src="js/data.js"></script>
-  <script src="js/pins.js"></script>
-  <script src="js/card.js"></script>
+  <script src="js/renderPins.js"></script>
+  <script src="js/renderCardFromTemplate.js"></script>
   <script src="js/ad-form.js"></script>
   <script src="js/map.js"></script>
   <script src="js/app.js"></script>
