📦 NEW: Add backend module

--- a/index.html
+++ b/index.html
@@ -249,9 +249,11 @@
   </template>
 
   <script src="js/utils.js"></script>
+  <script src="js/backend.js"></script>
   <script src="js/data.js"></script>
   <script src="js/renderPins.js"></script>
   <script src="js/renderCardFromTemplate.js"></script>
+  <script src="js/renderErrorMsg.js"></script>
   <script src="js/ad-form.js"></script>
   <script src="js/map.js"></script>
   <script src="js/app.js"></script>
