📦 NEW: Add renderSuccessMsg module

--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
   <script src="js/renderPins.js"></script>
   <script src="js/renderCardFromTemplate.js"></script>
   <script src="js/renderErrorMsg.js"></script>
+  <script src="js/renderSuccessMsg.js"></script>
   <script src="js/adForm.js"></script>
   <script src="js/map.js"></script>
   <script src="js/app.js"></script>
