--- a/index.html
+++ b/index.html
@@ -248,6 +248,11 @@
     </div>
   </template>
 
+  <div class="gh">
+    <a class="gh__link gh__link--git" href="https://github.com/yaz47/794285-keksobooking-18" aria-label="Git Hub"></a>
+    <a class="gh__link" href="https://yaz47.github.io/794285-keksobooking-18/index.html">1</a>
+  </div>
+
   <script src="js/utils.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/renderPins.js"></script>
